--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "outcomes-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://CloudPak-Outcomes.github.io/CloudPak-Outcomes",
+  "homepage": "https://CloudPak-Outcomes.github.io",
   "dependencies": {
     "@carbon/grid": "^10.23.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
