--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "https://CloudPak-Outcomes.github.io",
   "dependencies": {
+    "@carbon/colors": "^10.22.0",
     "@carbon/grid": "^10.23.0",
+    "@carbon/themes": "^10.31.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
