--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@carbon/colors": "^10.22.0",
     "@carbon/grid": "^10.23.0",
     "@carbon/themes": "^10.31.0",
+    "@carbon/type": "^10.26.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
